# basm

./: .gitignore  .travis.yml  Definitions.hs  Elf.hs  Encoder.hs  Encodings.hs  Lexer.hs  Main.hs  Other.hs  Parser.hs  Preprocessor.hs  README.md  Shared.hs  Tokenizer.hs  basm.cabal  run  test.asm  test2.asm
examples/: add.asm  call.asm  cmp.asm  cmp64.asm  cmp8.asm  cmp_byte.asm  data.asm  data_write.asm  dec.asm  define.asm  equ.asm  extern.asm  hello.asm  idiv.asm  inc.asm  jg.asm  jge.asm  jl.asm  jle.asm  jne.asm  jump.asm  lea.asm  modrm_one_operand.asm  mov_big_number.asm  mov_from_ptr_r13.asm  mov_indirect.asm  mov_r_bisd.asm  multiple_data_labels.asm  neg.asm  pushpop.asm  relo.asm  scale.asm  sete.asm  setne.asm  stackval.asm  str_len.asm  sub_zero.asm  symlen.asm  syscall.asm  test_dil_dil.asm  (+2 more)
old/: Definitions.hs  Main.hs
research/: add  assemble.py  compare.py
src/: Definitions.hs  Elf.hs  Encodings.hs  Lexer.hs  Main.hs  Parser.hs
testsuite/: Test.hs  TestEncoder.hs  TestLexer.hs
