name:                basm
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Brian Steffens
maintainer:          briansteffens@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable basm
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, binary, bytestring, containers
  default-language:    Haskell2010
